// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price #render() should not render underline when underlined flag is missing 1`] = `
<div
  className="ui-price ui-price_my-special-class ui-price_size_l"
  data-gtm-id="test"
>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_right"
    >
      د.إ.‏
    </div>
    <div
      className="ui-price__integers"
    >
      50.153
    </div>
    <div
      className="ui-price__decimals"
    >
      ,30
    </div>
  </div>
</div>
`;

exports[`Price #render() should render asterisk when showAsterisk is true 1`] = `
<div
  className="ui-price ui-price_size_l"
>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_left"
    >
      €
    </div>
    <div
      className="ui-price__integers"
    >
      50.153
    </div>
    <div
      className="ui-price__decimals"
    >
      ,30
    </div>
    <div
      className="ui-price__asterisk"
    >
      *
    </div>
  </div>
  <div
    className="ui-price__underline"
  />
</div>
`;

exports[`Price #render() should render only the amount of decimals defined in the decimalsPrecision 1`] = `
<div
  className="ui-price ui-price_size_l"
>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_right"
    >
      د.إ.‏
    </div>
    <div
      className="ui-price__integers"
    >
      50.153
    </div>
    <div
      className="ui-price__decimals"
    >
      ,30
    </div>
  </div>
</div>
`;

exports[`Price #render() should render with additional text block if it is a node 1`] = `
<div
  className="ui-price ui-price_size_l"
>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_left"
    >
      €
    </div>
    <div
      className="ui-price__integers"
    >
      50,153
    </div>
    <div
      className="ui-price__decimals"
    >
      .00
    </div>
  </div>
  <div
    className="ui-price__additional-text-block"
  >
    <div
      className="custom-class"
    >
      <span>
         some important info about price! 
      </span>
    </div>
  </div>
</div>
`;

exports[`Price #render() should render with additional text if it is non empty string 1`] = `
<div
  className="ui-price ui-price_size_l"
>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_left"
    >
      €
    </div>
    <div
      className="ui-price__integers"
    >
      50,153
    </div>
    <div
      className="ui-price__decimals"
    >
      .00
    </div>
  </div>
  <div
    className="ui-price__additional-text-block"
  >
    per day
  </div>
</div>
`;

exports[`Price #render() should render with decimals when value is integer 1`] = `
<div
  className="ui-price ui-price_size_l"
>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_left"
    >
      €
    </div>
    <div
      className="ui-price__integers"
    >
      50,153
    </div>
    <div
      className="ui-price__decimals"
    >
      .00
    </div>
  </div>
</div>
`;

exports[`Price #render() should render with discount when value is integer not equal 0 1`] = `
<div
  className="ui-price ui-price_size_l"
>
  <div
    className="ui-price__discount"
  >
    50,200.00
  </div>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_left"
    >
      €
    </div>
    <div
      className="ui-price__integers"
    >
      50,153
    </div>
    <div
      className="ui-price__decimals"
    >
      .00
    </div>
  </div>
</div>
`;

exports[`Price #render() should render with ui-price_size_xl class 1`] = `
<div
  className="ui-price ui-price_size_xl"
>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_left"
    >
      €
    </div>
    <div
      className="ui-price__integers"
    >
      50,153
    </div>
    <div
      className="ui-price__decimals"
    >
      .30
    </div>
  </div>
</div>
`;

exports[`Price #render() should render without decimals when showDecimals = false 1`] = `
<div
  className="ui-price ui-price_my-special-class ui-price_size_l"
>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_right"
    >
      د.إ.‏
    </div>
    <div
      className="ui-price__integers"
    >
      50.153
    </div>
  </div>
  <div
    className="ui-price__underline"
  />
</div>
`;

exports[`Price #render() should render without thousands separator when overriden to empty string 1`] = `
<div
  className="ui-price ui-price_size_l"
>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_right"
    >
      د.إ.‏
    </div>
    <div
      className="ui-price__integers"
    >
      50153
    </div>
    <div
      className="ui-price__decimals"
    >
      ,30
    </div>
  </div>
</div>
`;

exports[`Price #render() should return base class with mods for strings as class and string as mods 1`] = `
<div
  className="ui-price ui-price_my-special-class ui-price_size_l"
  data-gtm-id="test"
>
  <div
    className="ui-price__value-delimiter"
  >
    <div
      className="ui-price__currency ui-price__currency_right"
    >
      د.إ.‏
    </div>
    <div
      className="ui-price__integers"
    >
      50.153
    </div>
    <div
      className="ui-price__decimals"
    >
      ,30
    </div>
  </div>
  <div
    className="ui-price__underline"
  />
</div>
`;

exports[`Price #render() should return null if value is null 1`] = `""`;

exports[`Price #render() should return null if value is undefined 1`] = `""`;
